deploy/kubernetes/overlays/metrum-staging/delete-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-llmrouter
$patch: delete
